--- a/index.html
+++ b/index.html
@@ -6,5 +6,86 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+
+<h2>List of Chrome URLs</h2>
+<ul>
+<li><a href='chrome://chrome-urls/'>chrome://chrome-urls/ - All the possible URLs available in current build.</a></li>
+<li><a href='chrome://accessibility/'>chrome://accessibility</a></li>
+<li><a href='chrome://appcache-internals/'>chrome://appcache-internals</a></li>
+<li><a href='chrome://apps/'>chrome://apps</a></li>
+<li><a href='chrome://blob-internals/'>chrome://blob-internals</a></li>
+<li><a href='chrome://bookmarks/'>chrome://bookmarks</a></li>
+<li><a href='chrome://cache/'>chrome://cache</a></li>
+<li><a href='chrome://chrome/'>chrome://chrome</a></li>
+<li><a href='chrome://chrome-urls/'>chrome://chrome-urls</a></li>
+<li><a href='chrome://components/'>chrome://components</a></li>
+<li><a href='chrome://copresence/'>chrome://copresence</a></li>
+<li><a href='chrome://crashes/'>chrome://crashes</a></li>
+<li><a href='chrome://credits/'>chrome://credits</a></li>
+<li><a href='chrome://device-log/'>chrome://device-log</a></li>
+<li><a href='chrome://devices/'>chrome://devices</a></li>
+<li><a href='chrome://dns/'>chrome://dns</a></li>
+<li><a href='chrome://downloads/'>chrome://downloads</a></li>
+<li><a href='chrome://extensions/'>chrome://extensions</a></li>
+<li><a href='chrome://flags/'>chrome://flags</a></li>
+<li><a href='chrome://flash/'>chrome://flash</a></li>
+<li><a href='chrome://gcm-internals/'>chrome://gcm-internals</a></li>
+<li><a href='chrome://gpu/'>chrome://gpu</a></li>
+<li><a href='chrome://help/'>chrome://help</a></li>
+<li><a href='chrome://histograms/'>chrome://histograms</a></li>
+<li><a href='chrome://history/'>chrome://history</a></li>
+<li><a href='chrome://indexeddb-internals/'>chrome://indexeddb-internals</a></li>
+<li><a href='chrome://inspect/'>chrome://inspect</a></li>
+<li><a href='chrome://invalidations/'>chrome://invalidations</a></li>
+<li><a href='chrome://linux-proxy-config/'>chrome://linux-proxy-config</a></li>
+<li><a href='chrome://local-state/'>chrome://local-state</a></li>
+<li><a href='chrome://media-internals/'>chrome://media-internals</a></li>
+<li><a href='chrome://memory/'>chrome://memory</a></li>
+<li><a href='chrome://memory-internals/'>chrome://memory-internals</a></li>
+<li><a href='chrome://nacl/'>chrome://nacl</a></li>
+<li><a href='chrome://net-internals/'>chrome://net-internals</a></li>
+<li><a href='chrome://newtab/'>chrome://newtab</a></li>
+<li><a href='chrome://omnibox/'>chrome://omnibox</a></li>
+<li><a href='chrome://password-manager-internals/'>chrome://password-manager-internals</a></li>
+<li><a href='chrome://plugins/'>chrome://plugins</a></li>
+<li><a href='chrome://policy/'>chrome://policy</a></li>
+<li><a href='chrome://predictors/'>chrome://predictors</a></li>
+<li><a href='chrome://print/'>chrome://print</a></li>
+<li><a href='chrome://profiler/'>chrome://profiler</a></li>
+<li><a href='chrome://quota-internals/'>chrome://quota-internals</a></li>
+<li><a href='chrome://sandbox/'>chrome://sandbox</a></li>
+<li><a href='chrome://serviceworker-internals/'>chrome://serviceworker-internals</a></li>
+<li><a href='chrome://settings/'>chrome://settings</a></li>
+<li><a href='chrome://signin-internals/'>chrome://signin-internals</a></li>
+<li><a href='chrome://suggestions/'>chrome://suggestions</a></li>
+<li><a href='chrome://sync-internals/'>chrome://sync-internals</a></li>
+<li><a href='chrome://system/'>chrome://system</a></li>
+<li><a href='chrome://terms/'>chrome://terms</a></li>
+<li><a href='chrome://thumbnails/'>chrome://thumbnails</a></li>
+<li><a href='chrome://tracing/'>chrome://tracing</a></li>
+<li><a href='chrome://translate-internals/'>chrome://translate-internals</a></li>
+<li><a href='chrome://user-actions/'>chrome://user-actions</a></li>
+<li><a href='chrome://version/'>chrome://version</a></li>
+<li><a href='chrome://view-http-cache/'>chrome://view-http-cache</a></li>
+<li><a href='chrome://voicesearch/'>chrome://voicesearch</a></li>
+<li><a href='chrome://webrtc-internals/'>chrome://webrtc-internals</a></li>
+<li><a href='chrome://webrtc-logs/'>chrome://webrtc-logs</a></li>
+</ul>
+<h2>For Debug</h2>
+<p>The following pages are for debugging purposes only. Because they crash or hang the renderer, they're not linked directly; you can type them into the address bar if you need them.</p>
+<ul><li>chrome://badcastcrash</li>
+<li>chrome://crash</li>
+<li>chrome://crashdump</li>
+<li>chrome://kill</li>
+<li>chrome://hang</li>
+<li>chrome://shorthang</li>
+<li>chrome://gpuclean</li>
+<li>chrome://gpucrash</li>
+<li>chrome://gpuhang</li>
+<li>chrome://ppapiflashcrash</li>
+<li>chrome://ppapiflashhang</li>
+<li>chrome://quit/</li>
+<li>chrome://restart/</li>
+</ul>
 </body>
 </html>
